# duarteocarmo.com

./: .dockerignore  .gitignore  AGENTS.md  CNAME  Dockerfile  Makefile  README.md  books.py  justfile  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  talks.py  tasks.py
content/extra/: robots.txt
content/html/: StateOfVim.html  pt-euroeval.html
content/images/: beanstalk-thumbnail.png:Zone.Identifier
content/pages/: 404.md  about.md  blog.md  books.md  bye.md  consulting.md  photos.md  talks.md  thanks.md
content/photos/: 1.md  2.md  2014-06-13-00.md  2014-07-05-00.md  2014-07-07-00.md  2014-07-13-00.md  2014-07-15-00.md  2014-07-20-00.md  2014-07-23-00.md  2014-07-25-00.md  2014-07-31-00.md  2014-08-08-00.md  2014-08-10-00.md  2014-08-11-00.md  2014-08-13-00.md  2014-08-15-00.md  2014-08-17-00.md  2014-08-18-00.md  2014-08-20-00.md  2014-08-25-00.md  2014-08-29-00.md  2014-09-01-00.md  2014-09-08-00.md  2014-09-09-00.md  2014-09-10-00.md  2014-09-11-00.md  2014-09-13-00.md  2014-09-21-00.md  2014-10-05-00.md  2014-10-10-00.md  2014-10-19-00.md  2014-10-25-00.md  2014-10-30-00.md  2014-11-01-00.md  2014-11-10-00.md  2014-11-11-00.md  2014-11-13-00.md  2014-11-18-00.md  2014-11-22-00.md  2014-11-23-00.md  (+357 more)
content/posts/: 1-podcasts.markdown  10-devtuga.markdown  100-retrospectiva-#6.md  101-AMALIA-portuguese-llm.md  102-retrospectiva-#7.md  103-bagacov2-dataset.md  104-TTS-doesnt-suck-anymore.md  105-retrospectiva-#8.md  106-how-I-hermes.md  11-open-source-contribution.markdown  12-automation.markdown  (+96 more)
docker/: nginx.conf
other/: landing.html
(+35 files in other folders)
