[project]
name = "duarteocarmo-com"
version = "0.1.0"
description = "Personal website of Duarte O.Carmo"
requires-python = ">=3.10"
dependencies = [
  "pelican==4.9.1",
  "pelican-feed-filter==1.1.0",
  "pelican-simple-footnotes==1.0.2",
  "pelican-sitemap==1.1.0",
  "markdown==3.5.1",
  "pygments==2.17.2",
  "boto3==1.34.9",
  "diskcache==5.6.3",
  "feedparser==6.0.11",
  "markdownify==1.1.0",
  "pytz==2023.3.post1",
  "watchfiles==0.21.0",
]

[dependency-groups]
dev = ["ruff>=0.9"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tasks.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"plugins/*/__init__.py" = ["F403"]
"publishconf.py" = ["F403"]
"pelicanconf.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
